# idea-agent

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/controller/: mod.rs  rag_controller.rs
src/service/rag/core/: chain.rs  llm.rs  mod.rs  vector.rs
src/service/rag/handler/: conversation_handler.rs  mod.rs  retriever_handler.rs
