[package]
name = "ideabase-ai"
version = "1.0.0"
edition = "2024"

[dependencies]
log = {  version = "0.4" }
lazy_static = { version = "1"}
once_cell = { version = "1.21" }
idea-common = { version = "0.1" }

# json
serde_json = {  version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# web
http = { version = "1.3" }
actix-cors = { version = "0.7" }
actix-web = { version = "4.10" }

# rag
langchain-rust = { version = "4.6", features = ["sqlx", "qdrant"] }

#[dev-dependencies]
tokio-test = { version = "0.4" }